8243453: java --describe-module failed with non-ASCII module name under non-UTF8 environment

Reviewed-by: alanb